--- a/jokedisplay/src/main/res/layout/content_joke_display.xml
+++ b/jokedisplay/src/main/res/layout/content_joke_display.xml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="fill_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_joke_display"
-    tools:context="com.example.duvernea.jokedisplay.JokeDisplayActivity">
+    tools:context="com.example.duvernea.jokedisplay.JokeDisplayActivity"
+    android:background="@color/primary_light">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/joke_textview"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/joke_setup_textview"
+            android:padding="8dp"
+            android:textSize="@dimen/joke_setup_text_size"
+            android:layout_alignParentTop="true"
 
+            android:textColor="@android:color/black" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/joke_punchline_textview"
+            android:padding="8dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="@dimen/joke_punchline_text_size"
+            android:textStyle="italic"
+            android:layout_below="@id/joke_setup_textview"
+            android:textColor="@color/accent"
+            android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/get_joke_button_text"
+        android:layout_below="@id/joke_punchline_textview"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:padding="16dp"
+        android:textColor="@android:color/white"
+        android:background="@color/primary"
+        android:textSize="@dimen/joke_button_text_size" />
 </RelativeLayout>
