--- a/jokedisplay/src/main/res/layout/content_joke_display.xml
+++ b/jokedisplay/src/main/res/layout/content_joke_display.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/joke_setup_textview"
             android:padding="8dp"
+            android:layout_marginBottom="8dp"
             android:textSize="@dimen/joke_setup_text_size"
             android:layout_alignParentTop="true"
 
@@ -31,19 +32,19 @@
             android:textSize="@dimen/joke_punchline_text_size"
             android:textStyle="italic"
             android:layout_below="@id/joke_setup_textview"
-            android:textColor="@color/accent"
-            android:visibility="gone"/>
+            android:textColor="@color/accent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/get_joke_button_text"
-        android:layout_below="@id/joke_punchline_textview"
+        android:layout_below="@id/joke_setup_textview"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:padding="16dp"
         android:textColor="@android:color/white"
-        android:background="@color/primary"
-        android:textSize="@dimen/joke_button_text_size" />
+        android:textSize="@dimen/joke_button_text_size"
+        android:contentDescription="@string/get_joke_button_text"
+        android:background="@drawable/button"/>
 </RelativeLayout>
