--- a/app/src/free/res/layout/fragment_main.xml
+++ b/app/src/free/res/layout/fragment_main.xml
@@ -21,17 +21,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/instructions_text_view"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:textColor="@color/accent"
         />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructions_text_view"
         android:id="@+id/tell_joke_button"
         android:text="@string/joke_button_text"
+        android:layout_centerHorizontal="true"
+        android:padding="@dimen/abc_button_padding_horizontal_material"
         android:onClick="tellJoke"
-
-        />
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/abc_text_size_large_material"
+        android:background="@drawable/button"
+        android:layout_marginTop="16dp"/>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
