--- a/jokedisplay/src/main/res/layout/content_joke_display.xml
+++ b/jokedisplay/src/main/res/layout/content_joke_display.xml
@@ -19,7 +19,7 @@
             android:id="@+id/joke_setup_textview"
             android:padding="8dp"
             android:layout_marginBottom="8dp"
-            android:textSize="@dimen/joke_setup_text_size"
+            android:textSize="@dimen/abc_text_size_medium_material"
             android:layout_alignParentTop="true"
 
             android:textColor="@android:color/black" />
@@ -29,7 +29,7 @@
             android:id="@+id/joke_punchline_textview"
             android:padding="8dp"
             android:layout_marginBottom="16dp"
-            android:textSize="@dimen/joke_punchline_text_size"
+            android:textSize="@dimen/abc_text_size_medium_material"
             android:textStyle="italic"
             android:layout_below="@id/joke_setup_textview"
             android:textColor="@color/accent" />
@@ -38,13 +38,12 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/get_joke_button_text"
+        android:text="@string/button_get_joke_punchline"
         android:layout_below="@id/joke_setup_textview"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
-        android:padding="16dp"
+        android:padding="@dimen/abc_button_padding_horizontal_material"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/joke_button_text_size"
-        android:contentDescription="@string/get_joke_button_text"
+        android:textSize="@dimen/abc_text_size_large_material"
         android:background="@drawable/button"/>
 </RelativeLayout>
